--- a/markup/_layouts/_content/_homepage/field.jade
+++ b/markup/_layouts/_content/_homepage/field.jade
@@ -62,100 +62,100 @@ div.nl-section.nl-create-team.homepage-field
 							div.nl-player-block--data
 								p PATRIOTS
 								p.data <span>12.67</span> <span>$42000</span>			
+		div.row
+			div.col-12.col-lg-8.offset-lg-2					
+				div.nl-team-list.nl-my-teams.hide
+					.nl-card-wrapper
+						.row
+							.col-12.no-padding
+								div.nl-team-card.table-data-field
+									h3 team NLC2
+									<img src="assets/img/helmet.png" alt="helmet" class="helmet">
 
-			div.nl-team-list.nl-my-teams.hide
-				.nl-card-wrapper
-					.row
-						.col-12.no-padding
-							div.nl-team-card.table-data-field
-								h3 team NLC2
-								<img src="assets/img/helmet.png" alt="helmet" class="helmet">
+						.row
+							.col-12.no-padding
+								table.table.table-striped.nl-team-list-table
+									thead
+										tr
 
-					.row
-						.col-12.no-padding
-							table.table.table-striped.nl-team-list-table
-								thead
-									tr
+											th.name-list-view NAME
+											th POS
+											th FP
+											th SALARY
+											th
 
-										th.name-list-view NAME
-										th POS
-										th FP
-										th SALARY
-										th
+									tbody
+										tr
 
-								tbody
-									tr
+											td Player name
+											td.pos FLEX
+											td 30
+											td $0
+										tr
 
-										td Player name
-										td.pos FLEX
-										td 30
-										td $0
-									tr
+											td Player name
+											td.pos K
+											td 30
+											td $0
+										tr
 
-										td Player name
-										td.pos K
-										td 30
-										td $0
-									tr
+											td Player name
+											td.pos RB
+											td 30
+											td $0
+										tr
 
-										td Player name
-										td.pos RB
-										td 30
-										td $0
-									tr
+											td Player name
+											td.pos RB
+											td 30
+											td $0
+										tr
 
-										td Player name
-										td.pos RB
-										td 30
-										td $0
-									tr
+											td Player name
+											td.pos QB
+											td 30
+											td $0
+										tr
 
-										td Player name
-										td.pos QB
-										td 30
-										td $0
-									tr
+											td Player name
+											td.pos WR
+											td 30
+											td $0
+										tr
 
-										td Player name
-										td.pos WR
-										td 30
-										td $0
-									tr
+											td Player name
+											td.pos WR
+											td 30
+											td $0
+										tr
 
-										td Player name
-										td.pos WR
-										td 30
-										td $0
-									tr
+											td Player name
+											td.pos TE
+											td 30
+											td $0
+										tr
 
-										td Player name
-										td.pos TE
-										td 30
-										td $0
-									tr
-
-										td Player name
-										td.pos DEF
-										td 30
-										td $0
-			div.nl-team-info
-				div.nl-team-data
-					div.row 
-						div.col-3.col-lg-4
-							button.btn.btn-primary EDIT
-						div.col-9.col-lg-8
-							div.row
-								div.col-7 SALARY CAP
-								div.col-5
-									span $65000
-					
-								div.col-7 TOTAL SALARY
-								div.col-5
-									span $46730
-					
-								div.col-7 Available
-								div.col-5
-									span.avalibe $25000
-								div.col-7 PROJECTION
-								div.col-5
-									span.avalibe 133
+											td Player name
+											td.pos DEF
+											td 30
+											td $0
+			div.col-12
+				div.nl-team-info
+					div.nl-team-data
+						div.row 
+							div.col-3.col-lg-4
+								button.btn.btn-primary EDIT
+							div.col-9.col-lg-8
+								div.row
+									div.col-7 SALARY CAP
+									div.col-5
+										span $65000
+									div.col-7 Available
+									div.col-5
+										span.avalibe $25000
+									div.col-7 TOTAL SALARY
+									div.col-5
+										span $46730
+									div.col-7 PROJECTION
+									div.col-5
+										span.avalibe 133
