--- a/markup/_layouts/_content/_homepage/upcoming_contest.jade
+++ b/markup/_layouts/_content/_homepage/upcoming_contest.jade
@@ -1,6 +1,6 @@
 div.row.align-items-center.upcoming-contests
     div.col-md-12
-        h5 upcoming contests
+        h5 contests
 
 div.row
     div.col-lg-12.team
